верстка секции портфолио

--- a/index.html
+++ b/index.html
@@ -13,7 +13,44 @@
 
         <h1 class="header__title">Тестовый макет</h1>
         <p class="header__subtitle">фрилансер, веб-разработчик, создание сайтов</p>
+        
+        <a href="#portfolio" class="header__arrow">
+            <img src="img/chevron-down.svg" alt="">
+        </a>
     </header>
+
+    <main>
+        <section class="portfolio" id="portfolio">
+            <div class="container">
+                <h2 class="section__title">Портфолио</h2>
+                <div class="portfolio__cards__wrapper">
+                    <article class="portfolio__card">
+                        <img class="portfolio__card__img" src="img/portfolio/item-1.jpg" alt="Многостраничный сайт">
+                        <h3 class="portfolio__card__title">Многостраничный сайт</h3>
+                        <p>Верстка многостраничного сайта.</p>
+                    </article>
+
+                    <article class="portfolio__card">
+                        <img class="portfolio__card__img" src="img/portfolio/item-2.jpg" alt="Адаптивный лендинг">
+                        <h3 class="portfolio__card__title">Адаптивный лендинг</h3>
+                        <p>Верстка многостраничного сайта.</p>
+                    </article>
+
+                    <article class="portfolio__card">
+                        <img class="portfolio__card__img" src="img/portfolio/item-3.jpg" alt="Личный сайт">
+                        <h3 class="portfolio__card__title">Личный сайт </h3>
+                        <p>Верстка многостраничного сайта.</p>
+                    </article>
+
+                    <article class="portfolio__card">
+                        <img class="portfolio__card__img" src="img/portfolio/item-4.jpg" alt="Интернет магазин">
+                        <h3 class="portfolio__card__title">Интернет магазин</h3>
+                        <p>Верстка многостраничного сайта.</p>
+                    </article>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
