--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <p class="header__subtitle">фрилансер, веб-разработчик, создание сайтов</p>
         
         <a href="#portfolio" class="header__arrow" rel="m_PageScroll2id">
-            <img src="img/chevron-down.svg" alt="">
+            <svg class="svg-arrow" width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 18L24 30L36 18" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <!-- <img src="img/chevron-down.svg" alt=""> -->
         </a>
     </header>
 
